# HyundaiSelfDriving_2019

./: README.md
Autoware/ros/: .ycm_extra_conf.py  find_pid
range_vision_fusion/: CMakeLists.txt
range_vision_fusion/launch/: enhanced_range_vision_fusion.launch
range_vision_fusion/src/: enhanced_range_vision_fusion.cpp  range_vision_fusion.cpp
vision_files/: 0429_left  0429_right  0607_left_calib  0607_right_calib  0607_right_calib_2  0611_right_calib
vision_ws/: .ycm_extra_conf.py  kill_visionlab_detection.sh
vision_ws/devel/: .catkin  (+3 more)
vision_ws/src/v2x/parser/: CMakeLists.txt  package.xml
vision_ws/src/v2x/parser/include/j2735/: ._Makefile  ._Makefile.am.libasncodec  AccelSteerYawRateConfidence.c  AccelSteerYawRateConfidence.h  Acceleration.c  Acceleration.h  AccelerationConfidence.c  AccelerationConfidence.h  AccelerationSet4Way.c  AccelerationSet4Way.h  Accept.c  Accept.h  AddGrpB_Angle.c  AddGrpB_Angle.h  AddGrpB_Elevation.c  AddGrpB_Elevation.h  AddGrpB_MsgCount.c  AddGrpB_MsgCount.h  AddGrpB_TimeMark.c  AddGrpB_TimeMark.h  AdvisorySpeed.c  AdvisorySpeed.h  AdvisorySpeedList.c  AdvisorySpeedList.h  AdvisorySpeedType.c  AdvisorySpeedType.h  AllowedManeuvers.c  AllowedManeuvers.h  AlternateRequest.c  AlternateRequest.h  Altitude.c  Altitude.h  AltitudeConfidence.c  AltitudeConfidence.h  AltitudeValue.c  AltitudeValue.h  AmbientAirPressure.c  AmbientAirPressure.h  AmbientAirTemperature.c  AmbientAirTemperature.h  (+998 more)
vision_ws/src/v2x/parser/include/v2x_udpbroadcast2/: decode.h
vision_ws/src/v2x/parser/launch/: init_v2x_gway.launch
vision_ws/src/v2x/parser/src/: decode.cpp  v2x_main.cpp
vision_ws/v2x_object_detect/: CMakeLists.txt  package.xml.origin
vision_ws/v2x_object_detect/cfg/: object_detect_parameters.cfg  object_detect_parameters_soongsil.cfg
vision_ws/v2x_object_detect/include/v2x_processor/: bsm.h  convertMap2Baselink.h  tf_mat.h  tim.h
vision_ws/v2x_object_detect/src/: bsm.cpp  convertMap2Baselink.cpp  spat.cpp  tim.cpp
(+137 files in other folders)
